// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getField for Form 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-addon"
    >
      <label
        htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
      >
        <a>
          <i
            className="fa fa-upload fa-lg"
          />
        </a>
      </label>
      <input
        className="form-control"
        disabled={undefined}
        id="view-type-Form-field_type-LargeBinary-field-name-"
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
    <input
      className="form-control"
      disabled={true}
      onChange={[Function]}
      type="text"
      value=""
    />
    
    <a
      className="input-group-addon"
      download=""
      href="Test"
      target="_blank"
    >
      <i
        className="fa fa-download fa-lg"
      />
    </a>
  </div>
</div>
`;

exports[`getField for Form 2 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-addon"
    >
      <label
        htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
      >
        <a>
          <i
            className="fa fa-upload fa-lg"
          />
        </a>
      </label>
      <input
        className="form-control"
        disabled={undefined}
        id="view-type-Form-field_type-LargeBinary-field-name-"
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
    <input
      className="form-control"
      disabled={true}
      onChange={[Function]}
      type="text"
      value=""
    />
    
    
  </div>
</div>
`;

exports[`getField for Form readonly 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={Object {}}
  >
    Test
  </label>
  <div
    className="input-group"
  >
    <input
      className="form-control"
      disabled={true}
      onChange={[Function]}
      type="text"
      value=""
    />
    
    <a
      className="input-group-addon"
      download=""
      href="Test"
      target="_blank"
    >
      <i
        className="fa fa-download fa-lg"
      />
    </a>
  </div>
</div>
`;

exports[`getField for Form readonly 2 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={Object {}}
  >
    Test
  </label>
  <input
    className="form-control"
    disabled={true}
    id="view-type-Form-field_type-LargeBinary-field-name-"
    type="text"
  />
</div>
`;

exports[`getField for Form required 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-addon"
    >
      <label
        htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
      >
        <a>
          <i
            className="fa fa-upload fa-lg"
          />
        </a>
      </label>
      <input
        className="form-control"
        disabled={undefined}
        id="view-type-Form-field_type-LargeBinary-field-name-"
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
    <input
      className="form-control"
      disabled={true}
      onChange={[Function]}
      type="text"
      value=""
    />
    
    <a
      className="input-group-addon"
      download=""
      href="Test"
      target="_blank"
    >
      <i
        className="fa fa-download fa-lg"
      />
    </a>
  </div>
</div>
`;

exports[`getField for Form required with empty value 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-addon"
    >
      <label
        htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
      >
        <a>
          <i
            className="fa fa-upload fa-lg"
          />
        </a>
      </label>
      <input
        className="form-control"
        disabled={undefined}
        id="view-type-Form-field_type-LargeBinary-field-name-"
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
    <input
      className="form-control"
      disabled={true}
      onChange={[Function]}
      type="text"
      value=""
    />
    
    
  </div>
  <div>
    <span
      style={
        Object {
          "color": "#f44336",
        }
      }
    >
      This field is required
    </span>
  </div>
</div>
`;

exports[`getField for Form with filename 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-addon"
    >
      <label
        htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
      >
        <a>
          <i
            className="fa fa-upload fa-lg"
          />
        </a>
      </label>
      <input
        className="form-control"
        disabled={undefined}
        id="view-type-Form-field_type-LargeBinary-field-name-"
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
    <input
      className="form-control"
      disabled={undefined}
      onChange={[Function]}
      type="text"
      value=""
    />
    
    <a
      className="input-group-addon"
      download=""
      href="Test"
      target="_blank"
    >
      <i
        className="fa fa-download fa-lg"
      />
    </a>
  </div>
</div>
`;

exports[`getField for Form with filename 2 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-addon"
    >
      <label
        htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
      >
        <a>
          <i
            className="fa fa-upload fa-lg"
          />
        </a>
      </label>
      <input
        className="form-control"
        disabled={undefined}
        id="view-type-Form-field_type-LargeBinary-field-name-"
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
    <input
      className="form-control"
      disabled={true}
      onChange={[Function]}
      type="text"
      value=""
    />
    
    
  </div>
</div>
`;

exports[`getField for Form with filename 3 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-addon"
    >
      <label
        htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
      >
        <a>
          <i
            className="fa fa-upload fa-lg"
          />
        </a>
      </label>
      <input
        className="form-control"
        disabled={undefined}
        id="view-type-Form-field_type-LargeBinary-field-name-"
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
    <input
      className="form-control"
      disabled={undefined}
      onChange={[Function]}
      type="text"
      value="File name"
    />
    
    <a
      className="input-group-addon"
      download="File name"
      href="Test"
      target="_blank"
    >
      <i
        className="fa fa-download fa-lg"
      />
    </a>
  </div>
</div>
`;

exports[`getField for Form with filename 4 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-addon"
    >
      <label
        htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
      >
        <a>
          <i
            className="fa fa-upload fa-lg"
          />
        </a>
      </label>
      <input
        className="form-control"
        disabled={undefined}
        id="view-type-Form-field_type-LargeBinary-field-name-"
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
    <input
      className="form-control"
      disabled={true}
      onChange={[Function]}
      type="text"
      value="File name"
    />
    
    
  </div>
</div>
`;

exports[`getField for Form with filename and filesize 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-addon"
    >
      <label
        htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
      >
        <a>
          <i
            className="fa fa-upload fa-lg"
          />
        </a>
      </label>
      <input
        className="form-control"
        disabled={undefined}
        id="view-type-Form-field_type-LargeBinary-field-name-"
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
    <input
      className="form-control"
      disabled={undefined}
      onChange={[Function]}
      type="text"
      value="File name"
    />
    <span
      className="input-group-addon"
    >
      1234
    </span>
    <a
      className="input-group-addon"
      download="File name"
      href="Test"
      target="_blank"
    >
      <i
        className="fa fa-download fa-lg"
      />
    </a>
  </div>
</div>
`;

exports[`getField for Form with filename and filesize 2 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-addon"
    >
      <label
        htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
      >
        <a>
          <i
            className="fa fa-upload fa-lg"
          />
        </a>
      </label>
      <input
        className="form-control"
        disabled={undefined}
        id="view-type-Form-field_type-LargeBinary-field-name-"
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
    <input
      className="form-control"
      disabled={true}
      onChange={[Function]}
      type="text"
      value="File name"
    />
    <span
      className="input-group-addon"
    >
      1234
    </span>
    
  </div>
</div>
`;

exports[`getField for Form with filename and filesize and readonly 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="input-group"
  >
    <input
      className="form-control"
      disabled={true}
      onChange={[Function]}
      type="text"
      value="File name"
    />
    <span
      className="input-group-addon"
    >
      1234
    </span>
    <a
      className="input-group-addon"
      download="File name"
      href="Test"
      target="_blank"
    >
      <i
        className="fa fa-download fa-lg"
      />
    </a>
  </div>
</div>
`;

exports[`getField for Form with filename and filesize and readonly 2 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={Object {}}
  >
     
  </label>
  <input
    className="form-control"
    disabled={true}
    id="view-type-Form-field_type-LargeBinary-field-name-"
    type="text"
  />
</div>
`;

exports[`getField for Form with filesize 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-addon"
    >
      <label
        htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
      >
        <a>
          <i
            className="fa fa-upload fa-lg"
          />
        </a>
      </label>
      <input
        className="form-control"
        disabled={undefined}
        id="view-type-Form-field_type-LargeBinary-field-name-"
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
    <input
      className="form-control"
      disabled={true}
      onChange={[Function]}
      type="text"
      value=""
    />
    
    <a
      className="input-group-addon"
      download=""
      href="Test"
      target="_blank"
    >
      <i
        className="fa fa-download fa-lg"
      />
    </a>
  </div>
</div>
`;

exports[`getField for Form with filesize 2 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-addon"
    >
      <label
        htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
      >
        <a>
          <i
            className="fa fa-upload fa-lg"
          />
        </a>
      </label>
      <input
        className="form-control"
        disabled={undefined}
        id="view-type-Form-field_type-LargeBinary-field-name-"
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
    <input
      className="form-control"
      disabled={true}
      onChange={[Function]}
      type="text"
      value=""
    />
    
    
  </div>
</div>
`;

exports[`getField for Form with filesize 3 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-addon"
    >
      <label
        htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
      >
        <a>
          <i
            className="fa fa-upload fa-lg"
          />
        </a>
      </label>
      <input
        className="form-control"
        disabled={undefined}
        id="view-type-Form-field_type-LargeBinary-field-name-"
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
    <input
      className="form-control"
      disabled={true}
      onChange={[Function]}
      type="text"
      value=""
    />
    <span
      className="input-group-addon"
    >
      1234
    </span>
    <a
      className="input-group-addon"
      download=""
      href="Test"
      target="_blank"
    >
      <i
        className="fa fa-download fa-lg"
      />
    </a>
  </div>
</div>
`;

exports[`getField for Form with filesize 4 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-addon"
    >
      <label
        htmlFor="view-type-Form-field_type-LargeBinary-field-name-"
      >
        <a>
          <i
            className="fa fa-upload fa-lg"
          />
        </a>
      </label>
      <input
        className="form-control"
        disabled={undefined}
        id="view-type-Form-field_type-LargeBinary-field-name-"
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
    <input
      className="form-control"
      disabled={true}
      onChange={[Function]}
      type="text"
      value=""
    />
    <span
      className="input-group-addon"
    >
      1234
    </span>
    
  </div>
</div>
`;

exports[`getField for List 1`] = `
<div>
  <a
    href="Test"
    id="view-type-List-field_type-LargeBinary-field-name-"
    onClick={[Function]}
    target="_blank"
    value="Test"
  >
    Download file
  </a>
</div>
`;

exports[`getField for List 2 1`] = `
<div>
  <a
    href=""
    id="view-type-List-field_type-LargeBinary-field-name-"
    onClick={[Function]}
    target="_blank"
    value=""
  >
    
  </a>
</div>
`;

exports[`getField for List with filename 1`] = `
<div>
  <a
    download={undefined}
    href="Test"
    id="view-type-List-field_type-LargeBinary-field-name-"
    onClick={[Function]}
    target="_blank"
    value="Test"
  >
    Download file
  </a>
</div>
`;

exports[`getField for List with filename 2 1`] = `
<div>
  <a
    download="File name"
    href="Test"
    id="view-type-List-field_type-LargeBinary-field-name-"
    onClick={[Function]}
    target="_blank"
    value="Test"
  >
    File name
  </a>
</div>
`;

exports[`getField for List with filename and filesize 1`] = `
<div>
  <a
    download="File name"
    href="Test"
    id="view-type-List-field_type-LargeBinary-field-name-"
    onClick={[Function]}
    target="_blank"
    value="Test"
  >
    File name (1234)
  </a>
</div>
`;

exports[`getField for List with filesize 1`] = `
<div>
  <a
    href="Test"
    id="view-type-List-field_type-LargeBinary-field-name-"
    onClick={[Function]}
    target="_blank"
    value="Test"
  >
    Download file
  </a>
</div>
`;

exports[`getField for List with filesize 2 1`] = `
<div>
  <a
    href="Test"
    id="view-type-List-field_type-LargeBinary-field-name-"
    onClick={[Function]}
    target="_blank"
    value="Test"
  >
    Download file
  </a>
</div>
`;

exports[`getField for Thumbnail 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-LargeBinary-field-name-"
  >
     
  </label>
  <div>
    <a
      href="Test"
      id="view-type-Thumbnail-field_type-LargeBinary-field-name-"
      onClick={[Function]}
      target="_blank"
      value="Test"
    >
      Download file
    </a>
  </div>
</div>
`;

exports[`getField for Thumbnail 2 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-LargeBinary-field-name-"
  >
     
  </label>
  <div>
    <a
      href=""
      id="view-type-Thumbnail-field_type-LargeBinary-field-name-"
      onClick={[Function]}
      target="_blank"
      value=""
    >
      
    </a>
  </div>
</div>
`;

exports[`getField for Thumbnail with filename 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-LargeBinary-field-name-"
  >
     
  </label>
  <div>
    <a
      download={undefined}
      href="Test"
      id="view-type-Thumbnail-field_type-LargeBinary-field-name-"
      onClick={[Function]}
      target="_blank"
      value="Test"
    >
      Download file
    </a>
  </div>
</div>
`;

exports[`getField for Thumbnail with filename 2 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-LargeBinary-field-name-"
  >
     
  </label>
  <div>
    <a
      download="File name"
      href="Test"
      id="view-type-Thumbnail-field_type-LargeBinary-field-name-"
      onClick={[Function]}
      target="_blank"
      value="Test"
    >
      File name
    </a>
  </div>
</div>
`;

exports[`getField for Thumbnail with filename and filesize 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-LargeBinary-field-name-"
  >
     
  </label>
  <div>
    <a
      download="File name"
      href="Test"
      id="view-type-Thumbnail-field_type-LargeBinary-field-name-"
      onClick={[Function]}
      target="_blank"
      value="Test"
    >
      File name (1234)
    </a>
  </div>
</div>
`;

exports[`getField for Thumbnail with filesize 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-LargeBinary-field-name-"
  >
     
  </label>
  <div>
    <a
      href="Test"
      id="view-type-Thumbnail-field_type-LargeBinary-field-name-"
      onClick={[Function]}
      target="_blank"
      value="Test"
    >
      Download file
    </a>
  </div>
</div>
`;

exports[`getField for Thumbnail with filesize 2 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-LargeBinary-field-name-"
  >
     
  </label>
  <div>
    <a
      href="Test"
      id="view-type-Thumbnail-field_type-LargeBinary-field-name-"
      onClick={[Function]}
      target="_blank"
      value="Test"
    >
      Download file
    </a>
  </div>
</div>
`;
